--- a/app/views/v10/employer/view-advert/3a-live.html
+++ b/app/views/v10/employer/view-advert/3a-live.html
@@ -135,7 +135,7 @@ Adverts
 
 <!-- SEARCH start -->
   <div class="govuk-grid-column-two-thirds">
-    <form action="vacancies" method="get" >
+    <form action="0-vacancies-search" method="post" >
       <div class="row-group">
         <div class="search-table column-two-thirds govuk-!-margin-bottom-4">
           <fieldset class="govuk-fieldset">
