--- a/app/views/v10/employer/view-advert/0-dashboard.html
+++ b/app/views/v10/employer/view-advert/0-dashboard.html
@@ -25,7 +25,7 @@ Your apprentice adverts - Manage apprenticeships - GOV.UK
       <div class="govuk-grid-row govuk-!-margin-bottom-6">
         <div class="govuk-grid-column-two-thirds">
         <!-- Search -->
-        <form action="./vacancies" method="get" >
+        <form action="0-vacancies-search" method="post" >
           <div class="row-group">
             <div class="search-table column-two-thirds govuk-!-margin-bottom-4">
               <fieldset class="govuk-fieldset">
@@ -33,7 +33,7 @@ Your apprentice adverts - Manage apprenticeships - GOV.UK
                   <input type="hidden" name="clientsFilter" value="new">
                   <div class="search-input search-input-with-button">
                     <label class="govuk-label " for="search">
-                      Search by advert title or reference number
+                      Search by advert, reference or applicant
                     </label>
                   <div class="autocomplete__parent_wrapper">
                     <div class="autocomplete__wrapper">
