--- a/app/views/v10/employer/view-advert/1a-pending-review.html
+++ b/app/views/v10/employer/view-advert/1a-pending-review.html
@@ -143,7 +143,7 @@ Adverts
             <div class="form-group search-field search-field-darker">
               <div class="search-input search-input-with-button">
                 <label class="govuk-label" for="search">
-                  Search by advert, reference, employer or applicant
+                  Search by advert, reference or applicant
                 </label>
 
                 <div class="autocomplete__parent_wrapper">
