--- a/app/views/v10/employer/view-advert/3b-manage-advert-search.html
+++ b/app/views/v10/employer/view-advert/3b-manage-advert-search.html
@@ -48,7 +48,7 @@ Manage vacancy
   </div>
   <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
-      Vacancy reference
+      Advert reference
     </dt>
     <dd class="govuk-summary-list__value">
       VAC1000000997
@@ -75,21 +75,27 @@ Manage vacancy
       Disability confident
     </dt>
     <dd class="govuk-summary-list__value">
-      <p class="govuk-body">Yes</p>
+      <p class="govuk-body">No</p>
     </dd>
   </div>
 </dl>
 <!-- ////END SUMMARY//// -->
     
-<!-- ///ANALYTICS//// -->
     <div class="grid-row">
       <div class="column-full">
 
+        <div class="govuk-grid-row">
+          <div class="govuk-grid-column-full">
+            <div class="">
+              <a class="govuk-button" data-module="govuk-button" href="view">View advert</a>
+            </div>
+          </div>
+        </div>
+
         <p class="govuk-body">
-          <a class="govuk-link button-link  govuk-link--no-visited-state" href="view">View vacancy</a> &nbsp;
-          <a class="govuk-link button-link  govuk-link--no-visited-state" href="#">Clone vacancy</a> &nbsp;
-          <a class="govuk-link button-link  govuk-link--no-visited-state" href="3c-dates">Edit vacancy dates</a> &nbsp;
-          <a class="govuk-link button-link  govuk-link--no-visited-state" href="#">Delete vacancy</a> 
+          <a class="govuk-link button-link  govuk-link--no-visited-state" href="3c-dates">Edit advert dates</a> &nbsp;
+          <a class="govuk-link button-link  govuk-link--no-visited-state" href="#">Clone advert</a> &nbsp;
+          <a class="govuk-link button-link  govuk-link--no-visited-state" href="#">Close advert</a> 
         </p>
       </div>
     </div>
