--- a/app/views/v10/employer/view-advert/0-vacancies-search-0.html
+++ b/app/views/v10/employer/view-advert/0-vacancies-search-0.html
@@ -104,7 +104,7 @@ Vacancies
   </div>
   <div class="govuk-grid-column-one-third" style="text-align:right;">
 
-      <p class="govuk-body govuk-!-margin-bottom-0"><a href="../create/start-page" class="govuk-button govuk-!-margin-bottom-2">Create advert</a></p>
+      <p class="govuk-body govuk-!-margin-bottom-0"><a href="../create/start-page" class="govuk-button govuk-!-margin-bottom-2">Create an advert</a></p>
 
   </div>
 </div>
