--- a/app/views/v13/provider/view/8c-check-multiple-unsuccessful.html
+++ b/app/views/v13/provider/view/8c-check-multiple-unsuccessful.html
@@ -54,6 +54,11 @@ Manage vacancy
 </div>
 <br>
 
+{{ govukWarningText({
+  text: "This action cannot be undone.",
+  iconFallbackText: "Fallback text"
+}) }}
+
 <!-- radio buttons START -->
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
