--- a/app/views/v13/guidance/get-started.html
+++ b/app/views/v13/guidance/get-started.html
@@ -53,13 +53,17 @@ Get started - Apprenticeship services - GOV.UK
     </p>
 
  <!-- SECTION 3    -->
-    <h2 class="govuk-heading-l" id="working-independently">Using our Display adverts API if you are working independently</h2>
+    <h2 class="govuk-heading-l" id="working-independently">Using our APIs if you're working independently</h2>
     <p class="govuk-body">
-      If you are not working with a training provider or employer, you can use the Display adverts API. You’ll need someone with technical knowledge to connect your system with the API.      
+      If you're not working with a training provider or employer, you can access the following API keys:      
+    <p>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>Display adverts API</li>
+    </ul>
+    <p class="govuk-body">
+      You will need to <a href="register" class="govuk-link govuk-link--no-visited-state">create an account to access the API keys</a>.
       <br><br>
-      You will need to <a href="register" class="govuk-link govuk-link--no-visited-state">create an account to access the Display adverts API key</a>.
-      <br><br>
-      If you already have an account, you can <a href="login" class="govuk-link govuk-link--no-visited-state">sign in to access the Display adverts API</a>.
+      If you already have an account, you can <a href="login" class="govuk-link govuk-link--no-visited-state">sign in to access the API keys</a>.
     </p>
 
     <!-- <button class="govuk-button" data-module="govuk-button">
