content updated on employer sharing apps journey

--- a/app/views/v13/employer/account/application-shared-no.html
+++ b/app/views/v13/employer/account/application-shared-no.html
@@ -16,6 +16,8 @@ Manage apprentices
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <section>
+
+      <span class="govuk-caption-l">Entry Level Development Engineer Apprentice</span>
       <h1 class="govuk-heading-xl">Application ID: C5662EA</h1>
 
 
