--- a/app/views/v13/employer/email-shared-applications.html
+++ b/app/views/v13/employer/email-shared-applications.html
@@ -32,7 +32,7 @@
 		</p>
 
 		<p>
-			View shared applications: <a href="./view/6b-shared-applications">https://recruit-apprentice.service.gov.uk/accounts//8c0-d087f-a295-4cee-b3f8-40b7f174ae01</a></a>
+			View shared applications: <a href="login-shared">https://recruit-apprentice.service.gov.uk/accounts//8c0-d087f-a295-4cee-b3f8-40b7f174ae01</a></a>
 		</p>
 
 		<p>
