--- a/app/views/v13/employer/view/0-dashboard-v3.html
+++ b/app/views/v13/employer/view/0-dashboard-v3.html
@@ -235,7 +235,24 @@ Your apprentice adverts - Manage apprenticeships - GOV.UK
           </div>
         </div>
       </div>
+
+    <div class="govuk-grid-column-one-third">
+      <div class="das-card">
+        <div class="das-card--content">
+          <h3 class="govuk-heading-m das-card--heading">
+            <span class="das-card--stat">2</span>
+            <a class="card-link" href="6-shared-new">
+              Applications shared to review
+            </a>
+          </h3>
+          <p class="govuk-body das-card--description">Review applications shared with you by a training provider <br><br>
+          <a href="6-shared-all"> View all shared applications </a>
+          <br><br>
+        </p>
+        </div>
+      </div>
     </div>
+  </div>
 
     <a href="#" class="govuk-link govuk-!-font-size-24 govuk-!-font-weight-bold govuk-link--no-visited-state" name="button">View all your adverts (54)</a>
     <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
