--- a/app/views/v13/employer/view/6b-shared-applications.html
+++ b/app/views/v13/employer/view/6b-shared-applications.html
@@ -6,7 +6,7 @@ Manage vacancy
 
 {% block beforeContent %}
 {{super()}}
-<a href="6-shared" class="govuk-back-link">Back</a>
+<a href="6-shared-new" class="govuk-back-link">Back</a>
 
 {% endblock %}
 
