--- a/app/views/v13/_summary.html
+++ b/app/views/v13/_summary.html
@@ -80,10 +80,9 @@
                 </td>
               </tr>
               <tr class='govuk-table__row'>
-                <td class='govuk-table__cell'>UR version testing of Homepage tasks bar</td>
+                <td class='govuk-table__cell'>Homepage tasks bar</td>
                 <td class='govuk-table__cell'>
-                  <li><a class="govuk-link govuk-link--no-visited-state" href="/v13/employer/home">ADDED notification (applications level)</a></li>
-                  <li><a class="govuk-link govuk-link--no-visited-state" href="/v13/employer/home-v2">ADDED notification (advert level)</a></li>
+                  <li><a class="govuk-link govuk-link--no-visited-state" href="/v13/employer/home">ADDED notification task</a></li>
                 </td>
               </tr>
               <tr class='govuk-table__row'>
