date on employer sharing applications resond

--- a/app/views/v13/employer/view/6b-shared-applications-yes.html
+++ b/app/views/v13/employer/view/6b-shared-applications-yes.html
@@ -6,7 +6,7 @@ Adverts
 
 {% block beforeContent %}
 {{super()}}
-<a href="6-shared" class="govuk-back-link">Back</a>
+<a href="6-shared-new" class="govuk-back-link">Back</a>
 
 {% endblock %}
 
@@ -111,21 +111,21 @@ Adverts
       status: "INTERVIEWING",
       link: "../account/application-shared-yes",
       classes: "govuk-tag--yellow",
-      date: "7 Nov 2022"
+      date: "today"
     },
     {
       id: "C5545EA",
       status: "INTERVIEWING",
       link: "../account/application-shared-yes",
       classes: "govuk-tag--yellow",
-      date: "today"
+      date: "17 Nov 2022"
     },
     {
       id: "C5676EA",
       status: "UNSUCCESSFUL",
       link: "../account/application-shared-no",
       classes: "govuk-tag--red",
-      date: "today"
+      date: "14 Nov 2022"
     }
 ]
 %}
