--- a/app/views/v13/employer/view/0-dashboard-v2.html
+++ b/app/views/v13/employer/view/0-dashboard-v2.html
@@ -77,7 +77,7 @@ Your apprentice adverts - Manage apprenticeships - GOV.UK
         <div class="das-card">
           <div class="das-card--content">
             <h3 class="govuk-heading-m das-card--heading">
-              <span class="das-card--stat">8</span>
+              <span class="das-card--stat">1</span>
               <a class="card-link" href="1a-draft">
                 Draft adverts
               </a>
@@ -120,7 +120,7 @@ Your apprentice adverts - Manage apprenticeships - GOV.UK
         <div class="das-card">
           <div class="das-card--content">
             <h3 class="govuk-heading-m das-card--heading">
-              <span class="das-card--stat">2</span>
+              <span class="das-card--stat">0</span>
               <a class="card-link" href="1a-pending-review">
                 Pending review
               </a>
@@ -142,7 +142,7 @@ Your apprentice adverts - Manage apprenticeships - GOV.UK
         <div class="das-card">
           <div class="das-card--content">
             <h3 class="govuk-heading-m das-card--heading">
-              <span class="das-card--stat">2</span>
+              <span class="das-card--stat">0</span>
               <a class="card-link" href="#">
                 Rejected adverts
               </a>
@@ -157,7 +157,7 @@ Your apprentice adverts - Manage apprenticeships - GOV.UK
         <div class="das-card">
           <div class="das-card--content">
             <h3 class="govuk-heading-m das-card--heading">
-              <span class="das-card--stat">2</span>
+              <span class="das-card--stat">0</span>
               <a class="card-link" href="3a-live">
                 Live adverts
               </a>
@@ -179,16 +179,13 @@ Your apprentice adverts - Manage apprenticeships - GOV.UK
         <div class="das-card">
           <div class="das-card--content">
             <h3 class="govuk-heading-m das-card--heading">
-              <span class="das-card--stat">20</span>
+              <span class="das-card--stat">0</span>
               <a class="card-link" href="2a-new-applications">
                   New applications
               </a>
 
             </h3>
             <p class="govuk-body das-card--description">Applications from Find an apprenticeship service.<br><br>
-              <a href="#">View all applications</a>
-              <br>
-              <a href="6-shared">Shared applications to review</a>
             </p>
 
           </div>
@@ -202,12 +199,29 @@ Your apprentice adverts - Manage apprenticeships - GOV.UK
         <div class="das-card">
           <div class="das-card--content">
             <h3 class="govuk-heading-m das-card--heading">
-              <span class="das-card--stat">11</span>
+              <span class="das-card--stat">0</span>
               <a class="card-link" href="4a-closed">
                 Closed adverts
               </a>
             </h3>
             <p class="govuk-body das-card--description">Adverts that have passed the closing date. You can clone these adverts to republish them.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="govuk-grid-column-one-third">
+        <div class="das-card">
+          <div class="das-card--content">
+            <h3 class="govuk-heading-m das-card--heading">
+              <span class="das-card--stat">2</span>
+              <a class="card-link" href="6-shared-new">
+                Applications shared to review
+              </a>
+            </h3>
+            <p class="govuk-body das-card--description">Review applications shared with you by a training provider <br><br>
+            <a href="6-shared-all"> View all shared applications </a>
+            <br><br>
+          </p>
           </div>
         </div>
       </div>
