--- a/app/views/v13/employer/view/0-dashboard-v2.html
+++ b/app/views/v13/employer/view/0-dashboard-v2.html
@@ -77,8 +77,8 @@ Your apprentice adverts - Manage apprenticeships - GOV.UK
         <div class="das-card">
           <div class="das-card--content">
             <h3 class="govuk-heading-m das-card--heading">
-              <span class="das-card--stat">1</span>
-              <a class="card-link" href="1a-draft">
+              <span class="das-card--stat">0</span>
+              <a class="card-link" href="#">
                 Draft adverts
               </a>
             </h3>
@@ -121,7 +121,7 @@ Your apprentice adverts - Manage apprenticeships - GOV.UK
           <div class="das-card--content">
             <h3 class="govuk-heading-m das-card--heading">
               <span class="das-card--stat">0</span>
-              <a class="card-link" href="1a-pending-review">
+              <a class="card-link" href="#">
                 Pending review
               </a>
             </h3>
@@ -158,7 +158,7 @@ Your apprentice adverts - Manage apprenticeships - GOV.UK
           <div class="das-card--content">
             <h3 class="govuk-heading-m das-card--heading">
               <span class="das-card--stat">0</span>
-              <a class="card-link" href="3a-live">
+              <a class="card-link" href="#">
                 Live adverts
               </a>
             </h3>
@@ -180,7 +180,7 @@ Your apprentice adverts - Manage apprenticeships - GOV.UK
           <div class="das-card--content">
             <h3 class="govuk-heading-m das-card--heading">
               <span class="das-card--stat">0</span>
-              <a class="card-link" href="2a-new-applications">
+              <a class="card-link" href="#">
                   New applications
               </a>
 
@@ -200,7 +200,7 @@ Your apprentice adverts - Manage apprenticeships - GOV.UK
           <div class="das-card--content">
             <h3 class="govuk-heading-m das-card--heading">
               <span class="das-card--stat">0</span>
-              <a class="card-link" href="4a-closed">
+              <a class="card-link" href="#">
                 Closed adverts
               </a>
             </h3>
