--- a/app/views/v13/_summary.html
+++ b/app/views/v13/_summary.html
@@ -90,6 +90,7 @@
                 <td class='govuk-table__cell'>
                   <li><a class="govuk-link govuk-link--no-visited-state" href="/v13/employer/view/0-dashboard">ADDED new tile</a></li>
                   <li><a class="govuk-link govuk-link--no-visited-state" href="/v13/employer/view/0-dashboard-v3">ADDED banner</a></li>
+                  <li><a class="govuk-link govuk-link--no-visited-state" href="/v13/employer/view/0-dashboard-v2">ADDED new tile (0 tiles)</a></li>
                 </td>
               </tr>
             </tbody>
