--- a/app/views/v13/traineeships/create/start-page.html
+++ b/app/views/v13/traineeships/create/start-page.html
@@ -13,8 +13,30 @@ Create a vacancy - Recruitment - {{serviceName}} - GOV.UK
 
 {% block content %}
 
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+
+
+
+    <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
+      <div class="govuk-notification-banner__header">
+        <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
+          Important
+        </h2>
+      </div>
+      <div class="govuk-notification-banner__content">
+        <p class="govuk-notification-banner__heading">
+          The last possible start date for a traineeship is 31 July 2023.
+        </p>
+        <p>You will not be able to submit new vacancies after 30 June 2023. Any new vacancies you create must close on or before 15 July 2023.</p>
+        <p>Learn more about <a href="">[traineeship announcement title]</a>.</p>
+      </div>
+    </div>
+
+
+
+
+
       <h1 class="govuk-heading-xl">Create a vacancy</h1>
       <p class="govuk-body-l">Recruit a trainee by creating a vacancy on <a href="https://www.gov.uk/find-traineeship" class="govuk-link govuk-link--no-visited-state" target="_blank">Find a traineeship (opens in a new tab)</a>.</p>
       
