--- a/app/views/v13/traineeships/view-vacancy/0-dashboard.html
+++ b/app/views/v13/traineeships/view-vacancy/0-dashboard.html
@@ -5,11 +5,36 @@ Recruitment - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block content %}
+
+<style>
+  .govuk-notification-banner__content > * {
+    box-sizing: border-box;
+   max-width: 100%; }
+</style>
+
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
+
+    <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
+      <div class="govuk-notification-banner__header">
+        <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
+          Important
+        </h2>
+      </div>
+      <div class="govuk-notification-banner__content">
+        <p class="govuk-notification-banner__heading">
+          The last possible start date for a traineeship is 31 July 2023.
+        </p>
+        <p>You will not be able to submit new vacancies after 30 June 2023. Any new vacancies you create must close on or before 15 July 2023.</p>
+        <p>Learn more about <a href="">[traineeship announcement title]</a>.</p>
+      </div>
+    </div>
+
     <!-- Header -->
     <div class="govuk-grid-row govuk-!-margin-top-4">
       <div class="govuk-grid-column-two-thirds">
+
+        
         <!-- Heading -->
         <h1 class="govuk-heading-xl ">Your traineeship vacancies</h1>
       </div>
