updated TP sharing apps journey - vacancy analytics on seperate page

--- a/app/views/v13/provider/view/3c-manage-applications-shared-multiple.html
+++ b/app/views/v13/provider/view/3c-manage-applications-shared-multiple.html
@@ -6,7 +6,7 @@ Manage vacancy
 
 {% block beforeContent %}
 {{super()}}
-<a href="3b-manage-vacancy" class="govuk-back-link">Back</a>
+<a href="3a-live" class="govuk-back-link">Back</a>
 
 {% endblock %}
 
@@ -34,10 +34,80 @@ Manage vacancy
   </div>
 </div>
 
+<!-- ////START SUMMARY//// -->
+<dl class="govuk-summary-list">
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
+      Status
+    </dt>
+    <dd class="govuk-summary-list__value">
+      Live
+    </dd>
+  </div>
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
+      Vacancy reference
+    </dt>
+    <dd class="govuk-summary-list__value">
+      VAC1000000997
+    </dd>
+  </div>
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
+      Closing date
+    </dt>
+    <dd class="govuk-summary-list__value">
+      <p class="govuk-body">01 Nov 2022</p>
+    </dd>
+  </div>
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
+      Possible start date
+    </dt>
+    <dd class="govuk-summary-list__value">
+      <p class="govuk-body">01 Jan 2023</p>
+    </dd>
+  </div>
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
+      Disability confident
+    </dt>
+    <dd class="govuk-summary-list__value">
+      <p class="govuk-body">Yes</p>
+    </dd>
+  </div>
+</dl>
+<!-- ////END SUMMARY//// -->
+    
+<!-- vacnacy actions START -->
+    <div class="grid-row">
+      <div class="column-full">
+
+        <p class="govuk-body">
+          <a class="govuk-link button-link  govuk-link--no-visited-state" href="view">View vacancy</a> &nbsp;
+          <a class="govuk-link button-link  govuk-link--no-visited-state" href="#">Clone vacancy</a> &nbsp;
+          <a class="govuk-link button-link  govuk-link--no-visited-state" href="3c-dates">Edit vacancy dates</a> &nbsp;
+          <a class="govuk-link button-link  govuk-link--no-visited-state" href="#">Close vacancy</a> 
+        </p>
+      </div>
+    </div>
+
+    <br>
+
+    {{ govukButton({
+      text: "View vacancy analytics",
+      classes: "govuk-button--secondary",
+      href: '3b-vacancy-analytics'
+    }) }}
+<!-- vacancy actions END -->
+
+    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
 <!-- Application actions -->
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
+
+    <h2 class="govuk-heading-m">Manage applications</h2>
 
     <div class="govuk-inset-text">
       <p class="govuk-body" >
