--- a/app/views/v13/provider/view/3a-live.html
+++ b/app/views/v13/provider/view/3a-live.html
@@ -195,7 +195,7 @@ Vacancies
               <td class="govuk-table__cell"> 20 </td>
               <td class="govuk-table__cell">01 Nov 2022</td>             
               <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">live</strong></td>
-              <td class="govuk-table__cell"><a href="3b-manage-vacancy" class="govuk-link">Manage</a></td>   
+              <td class="govuk-table__cell"><a href="3c-manage-applications" class="govuk-link">Manage</a></td>   
           </tr>
 
           <tr class="govuk-table__row govuk-body-s">
