--- a/app/views/v13/provider/view/3b-vacancy-analytics.html
+++ b/app/views/v13/provider/view/3b-vacancy-analytics.html
@@ -6,97 +6,24 @@ Manage vacancy
 
 {% block beforeContent %}
 {{super()}}
-<a href="javascript:history.back()" class="govuk-back-link">Back</a>
+<a href="3c-manage-applications" class="govuk-back-link">Back</a>
 
 {% endblock %}
 
 {% block content %}
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
-    {% if data.alert=="clone" and data.user=='employer'%}
-    <div class="govuk-info-basic ">
+  <div class="govuk-grid-column-full-width">
 
-          <!-- <span class="govuk-!-font-weight-bold">Activity</span> -->
-          <p class="govuk-body">You can now clone from the any vacancy management page. From your vacancies dashabord search for a vacancy and click manage.</p>
-          <p class="govuk-body govuk-!-margin-bottom-0"><a href="?alert=none" class="govuk-link--no-visited-state">Dismiss this notification</a></p>
-        </div>
- 
-    {% endif %}
-
-        <span class="govuk-caption-l">Gloucestershire Health and Care NHS Foundation Trust</span>
-    <h1 class="govuk-heading-l">Entry Level Development Engineer Apprentice</h1>
-
-  </div>
-</div>
-
-
-<!-- ////START SUMMARY//// -->
-<dl class="govuk-summary-list">
-  <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">
-      Status
-    </dt>
-    <dd class="govuk-summary-list__value">
-      Live
-    </dd>
-  </div>
-  <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">
-      Vacancy reference
-    </dt>
-    <dd class="govuk-summary-list__value">
-      VAC1000000997
-    </dd>
-  </div>
-  <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">
-      Closing date
-    </dt>
-    <dd class="govuk-summary-list__value">
-      <p class="govuk-body">01 Nov 2022</p>
-    </dd>
-  </div>
-  <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">
-      Possible start date
-    </dt>
-    <dd class="govuk-summary-list__value">
-      <p class="govuk-body">01 Jan 2023</p>
-    </dd>
-  </div>
-  <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">
-      Disability confident
-    </dt>
-    <dd class="govuk-summary-list__value">
-      <p class="govuk-body">Yes</p>
-    </dd>
-  </div>
-</dl>
-<!-- ////END SUMMARY//// -->
-    
-    <div class="grid-row">
-      <div class="column-full">
-
-        <p class="govuk-body">
-          <a class="govuk-link button-link  govuk-link--no-visited-state" href="view">View vacancy</a> &nbsp;
-          <a class="govuk-link button-link  govuk-link--no-visited-state" href="#">Clone vacancy</a> &nbsp;
-          <a class="govuk-link button-link  govuk-link--no-visited-state" href="3c-dates">Edit vacancy dates</a> &nbsp;
-          <a class="govuk-link button-link  govuk-link--no-visited-state" href="#">Close vacancy</a> 
-        </p>
-      </div>
-    </div>
-
-    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+    <h1 class="govuk-heading-l">Vacancy analytics</h1>
 
 <!-- analytics START -->
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <h2 class="govuk-heading-l">Vacancy analytics
-      <span class="govuk-caption-l">Showing stats from 12th Oct 2022 to 17th Oct 2022</span>
-    </h2>
+     <p>Showing stats from 12th Oct 2022 to 17th Oct 2022</p>
+    
     <p class="govuk-body">Analytics show the total amount and the change from the previous 7 days</p>
+
     <div id="analytics" class="govuk-grid-row">
       <div class="analytics--block govuk-grid-column-one-half" style="border: 1px solid">
         <!-- <h3 class="analytics--header govuk-heading-s">Appeared in search</h3> -->
@@ -147,13 +74,6 @@ Manage vacancy
 </div>
 
 <!-- ////END ANALYTICS//// -->
-
-<br>
-
-{{ govukButton({
-  text: "Manage applications",
-  href: "3c-manage-applications"
-}) }}
 
   
   </div>
