Provider sharing application H1 H2 corrected

--- a/app/views/v13/provider/view/3c-manage-applications.html
+++ b/app/views/v13/provider/view/3c-manage-applications.html
@@ -12,10 +12,10 @@ Manage vacancy
 
 {% block content %}
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
+  <div class="govuk-grid-column-full-width">
 
         <span class="govuk-caption-l">Gloucestershire Health and Care NHS Foundation Trust</span>
-    <h1 class="govuk-heading-l">Entry Level Development Engineer Apprentice</h1>
+    <h1 class="govuk-heading-xl">Entry Level Development Engineer Apprentice</h1>
 
   </div>
 </div>
@@ -93,7 +93,7 @@ Manage vacancy
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
 
-  <h2 class="govuk-heading-m">Manage applications</h2>
+  <h2 class="govuk-heading-l">Manage applications</h2>
 
 <!-- Application actions -->
     <div class="govuk-inset-text">
