--- a/app/views/v13/provider/view/3c-manage-applications-shared.html
+++ b/app/views/v13/provider/view/3c-manage-applications-shared.html
@@ -27,9 +27,8 @@ Manage vacancy
       </div>
     </div>
 
-        <span class="govuk-caption-l">Gloucestershire Health and Care NHS Foundation Trust</span>
-    <h1 class="govuk-heading-l">Entry Level Development Engineer Apprentice</h1>
-
+    <span class="govuk-caption-l">Gloucestershire Health and Care NHS Foundation Trust</span>
+    <h1 class="govuk-heading-xl">Entry Level Development Engineer Apprentice</h1>
 
   </div>
 </div>
@@ -107,7 +106,7 @@ Manage vacancy
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <h2 class="govuk-heading-m">Manage applications</h2>
+    <h2 class="govuk-heading-l">Manage applications</h2>
 
     <div class="govuk-inset-text">
       <p class="govuk-body" >
