--- a/app/views/v13/provider/view/3c-manage-applications-unsuccessful-multiple.html
+++ b/app/views/v13/provider/view/3c-manage-applications-unsuccessful-multiple.html
@@ -30,7 +30,7 @@ Manage vacancy
 
         
         <span class="govuk-caption-l">Gloucestershire Health and Care NHS Foundation Trust</span>
-    <h1 class="govuk-heading-l">Entry Level Development Engineer Apprentice</h1>
+    <h1 class="govuk-heading-xl">Entry Level Development Engineer Apprentice</h1>
 
 
   </div>
@@ -110,7 +110,7 @@ Manage vacancy
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <h2 class="govuk-heading-m">Manage applications</h2>
+    <h2 class="govuk-heading-l">Manage applications</h2>
     
     <div class="govuk-inset-text">
       <p class="govuk-body" >
